Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body><!-- the body element is where everything we will see on the page will go -->
 
     <!-- our soon to be beautiful rainbow! -->
-    <div id= "red"> <!-- the grandest grandparent div -->
-      <div id= "orange">
-        <div id= "yellow">
-          <div id= "green">
-            <div id= "blue">
-              <div id= "indigo">
-                <div id= "violet"></div> <!-- the grandest child div -->
+    <div id1= "red"> <!-- the grandest grandparent div -->
+      <div id2= "orange">
+        <div id3= "yellow">
+          <div id4= "green">
+            <div id5= "blue">
+              <div id5= "indigo">
+                <div id7= "violet"></div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
